2000-02-25  Ken Raeburn  <raeburn@mit.edu>
	    Alec H. Peterson  <ahp@hilander.com>

	* configure.in: Invoke KRB5_SOCKADDR_SA_LEN.

	* network.c: Include <sys/ioctl.h>, <syslog.h>, <net/if.h>.
	(foreach_localaddr): New function, copied from
	lib/krb5/os/localaddr.c.
	(NEED_SOCKETS): Define before including k5-int.h.
	(n_sockets): New variable.
	(setup_port): New function; creates listening udp ports given an
	address.
	(setup_network): Call foreach_localaddr to set up listening
	sockets on each local address, so we can always respond from the
	receiving address.
	(listen_and_process): Use n_sockets as upper bound of loop.

2000-02-24  Ken Raeburn  <raeburn@mit.edu>

	* kerberos_v4.c (v4_klog): Don't treat the formatted text as a
	format string.  (Patch from Mike Friedman,
	mikef@ack.Berkeley.EDU.)

2000-02-07  Ken Raeburn  <raeburn@mit.edu>

	* kdc_preauth.c (get_preauth_hint_list): Log a message if preauth
	is required but no preauth types are available.
	(return_sam_data): Fix typo in figuring length of data to XOR when
	merging keys.  Just return 0 if no input preauth data is
	available.

2000-02-06  Ken Raeburn  <raeburn@mit.edu>

	* kdc_preauth.c: Include <syslog.h>.
	(struct _krb5_preauth_systems, preauth_systems): Add new NAME
	field, for logging debug info.
	(check_padata): Call krb5_klog_syslog instead of com_err.
	(missing_required_preauth, check_padata): Added debugging
	krb5_klog_syslog calls, currently disabled.
	(sam_inst_map): Add {} around array element initializers to keep
	gcc quiet.
	(get_sam_edata): Delete unused variable I.

	Patches from Frank Cusack for hw-preauth replay detection.
	* main.c (rc_lifetime): New global variables.
	(kdc_initialize_rcache): Initialize rc_lifetime from context
	clockskew.
	(setup_sam): New function; initializes psr_key.
	(main): Call setup_sam.
	* kdc_preauth.c (get_sam_edata): Fill in new fields of PSR.  Use
	psr_key for encrypting instead of database master key.