@@ -5,6 +5,7 @@ AC_HEADER_CHECK(termios.h,AC_FUNC_CHECK([tcsetattr],AC_DEFINE(POSIX_TERMIOS)))
 AC_CHECK_HEADERS(syslog.h stdarg.h sys/select.h)
 AC_CHECK_FUNCS(openlog syslog closelog strftime vsprintf)
 AC_PROG_AWK
+KRB5_AC_INET6
 KRB5_SOCKADDR_SA_LEN
 CHECK_SIGNALS
 HAS_ANSI_VOLATILE
